--- a/src/components/main/Benefits/Benefits.scss
+++ b/src/components/main/Benefits/Benefits.scss
@@ -15,7 +15,6 @@
     padding: v.$spacing-2xl 0;
   }
 
-  // Декоративна лінія
   &::before {
     content: "";
     position: absolute;
@@ -36,6 +35,7 @@
   .container {
     position: relative;
     z-index: 2;
+    max-width: v.$breakpoint-xl;
   }
 
   h2 {
@@ -83,7 +83,7 @@
   }
 
   .benefits-photo {
-    width: 35%;
+    width: 32%;
     flex-shrink: 0;
     position: relative;
     z-index: 2;
@@ -102,7 +102,6 @@
       }
     }
 
-    // Декоративний елемент за фото
     &::before {
       content: "";
       position: absolute;
@@ -126,50 +125,64 @@
     width: 65%;
     display: flex;
     flex-direction: column;
-    gap: v.$spacing-xl;
+    gap: v.$spacing-lg;
 
     @media (max-width: v.$breakpoint-md) {
       width: 100%;
     }
   }
 
-  .benefits-grid {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-gap: v.$spacing-lg;
+  .benefits-grid-wide {
+    display: flex;
+    flex-direction: column;
+    gap: v.$spacing-lg;
     position: relative;
     z-index: 2;
+  }
+
+  .benefits-row {
+    display: flex;
+    justify-content: center;
+    gap: v.$spacing-md;
+
+    &.benefits-row-4 {
+      .benefit-item {
+        flex: 1;
+        max-width: 200px;
+
+        @media (min-width: 1400px) {
+          max-width: 220px;
+        }
+      }
+    }
+
+    &.benefits-row-3 {
+      justify-content: center;
+
+      .benefit-item {
+        flex: 0 0 auto;
+        width: 200px;
+
+        @media (min-width: 1400px) {
+          width: 220px;
+        }
+      }
+    }
 
     @media (max-width: v.$breakpoint-md) {
-      grid-template-columns: repeat(2, 1fr);
+      flex-wrap: wrap;
+      justify-content: center;
+
+      .benefit-item {
+        flex: 0 0 calc(50% - v.$spacing-md);
+        max-width: 250px;
+      }
     }
 
     @media (max-width: v.$breakpoint-sm) {
-      grid-template-columns: 1fr;
-    }
-  }
-
-  .benefits-bottom {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-gap: v.$spacing-lg;
-    margin-top: v.$spacing-sm;
-    position: relative;
-    z-index: 2;
-
-    @media (max-width: v.$breakpoint-md) {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-
-    .benefit-item {
-      @media (max-width: v.$breakpoint-md) {
-        width: calc(50% - v.$spacing-md);
-      }
-
-      @media (max-width: v.$breakpoint-sm) {
-        width: 100%;
+      .benefit-item {
+        flex: 0 0 100%;
+        max-width: none;
       }
     }
   }
@@ -188,7 +201,6 @@
     position: relative;
     overflow: hidden;
 
-    // Декоративний елемент (градієнтний кут)
     &::before {
       content: "";
       position: absolute;
@@ -212,17 +224,14 @@
 
       .benefit-icon {
         background-color: v.$dark-blue;
-
-        img {
-          filter: brightness(2);
-        }
+        color: white;
       }
     }
   }
 
   .benefit-icon {
-    width: 70px;
-    height: 70px;
+    width: 60px;
+    height: 60px;
     border-radius: 50%;
     margin-bottom: v.$spacing-md;
     display: flex;
@@ -230,19 +239,27 @@
     justify-content: center;
     background-color: v.$graphite-light;
     transition: all v.$transition-medium;
+    color: v.$graphite-dark;
 
-    img {
-      width: 40px;
-      height: 40px;
-      object-fit: contain;
-      transition: filter v.$transition-medium;
+    @media (min-width: 1400px) {
+      width: 70px;
+      height: 70px;
+    }
+
+    svg {
+      transition: color v.$transition-medium;
     }
   }
 
   .benefit-title {
-    font-size: v.$font-size-md;
-    line-height: 1.4;
+    font-size: v.$font-size-sm;
+    line-height: 1.3;
     font-weight: v.$font-weight-semibold;
     color: v.$graphite-dark;
+
+    @media (min-width: 1400px) {
+      font-size: v.$font-size-md;
+      line-height: 1.4;
+    }
   }
 }
